--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
+    "react-bootstrap-table": "^4.3.1",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
