--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^5.0.7",
     "react-router-config": "^4.4.0-beta.1",
     "react-router-dom": "^4.3.1",
+    "react-star-rating-component": "^1.4.1",
     "react-test-renderer": "^16.5.2",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.0",
